--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/slicknav.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="js/jquery.slicknav.min.js"></script>
+	<script type="text/javascript">
+    	$(document).ready(function(){
+			$('#nav_menu').slicknav({prependTo:"#mobile_menu"});
+    	});
+    </script>
 </head>
-
 <body>
 	<header>
 		<img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80">
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+	<nav id="mobile_menu">
 	<nav id="nav_menu">
 		<ul>
 			<li><a href="index.html" class="current">Home</a></li>
@@ -28,6 +37,7 @@
 			</ul></li>
 		</ul>
 	</nav>
+	</nav>
 	<main>
 		<section>
 			<h2>Our Mission</h2>
@@ -40,7 +50,7 @@
 			<h1>Speaker of the Month</h1>
 			<article>
 				<h2>Fossil Threads in the Web of Life</h2>
-				<img src="images/sampson_dinosaur.jpg" alt="Scott Sampson with dinosaur">
+				<img src="images/sampson_dinosaur.jpg" alt="Scott Sampson with dinosaur" max-width="">
 				<h3>February<br>
 				Scott Sampson</h3>
 				<p>What's 75 million years old and brand spanking new? A teenage Utahceratops! 
